--- a/app/styles/mixins/collapsed-container.scss
+++ b/app/styles/mixins/collapsed-container.scss
@@ -9,10 +9,8 @@
 }
 
 @mixin collapsed-container-title () {
-  color: $text-blue;
+  @include ilios-heading-h5;
   cursor: pointer;
-  font-size: 1rem;
-  font-weight: bold;
 
   &::after {
     content: '\25BA';
